# whoeverwants-server

./: .env.template  .gitignore  CNAME  Cargo.toml  Makefile.toml  README.md  gather_context.py  index.html
crates/openapi/: Cargo.toml
crates/openapi/docs/: Api20100401AllTimeApi.md  Api20100401ApplicationApi.md  Api20100401AssignedAddOnApi.md  Api20100401AssignedAddOnExtensionApi.md  Api20100401BalanceApi.md  Api20100401CallApi.md  Api20100401ConnectAppApi.md  Api20100401CredentialListApi.md  Api20100401DailyApi.md  Api20100401EventApi.md  Api20100401HealthCheckApi.md  Api20100401IpAccessControlListApi.md  Api20100401IpAccessControlListMappingApi.md  Api20100401LastMonthApi.md  Api20100401LocalApi.md  Api20100401MediaApi.md  Api20100401MessageApi.md  Api20100401OutgoingCallerIdApi.md  Api20100401ParticipantApi.md  Api20100401PayloadApi.md  Api20100401PaymentApi.md  Api20100401RecordingApi.md  Api20100401ShortCodeApi.md  Api20100401SigningKeyApi.md  Api20100401SiprecApi.md  Api20100401StreamApi.md  Api20100401ThisMonthApi.md  Api20100401TollFreeApi.md  Api20100401TriggerApi.md  Api20100401UserDefinedMessageApi.md  Api20100401VoipApi.md  ApiPeriodV2010PeriodAccountPeriodAddress.md  ApiPeriodV2010PeriodAccountPeriodAvailablePhoneNumberCountry.md  ApiPeriodV2010PeriodAccountPeriodAvailablePhoneNumberCountryPeriodAvailablePhoneNumberMachineToMachine.md  ApiPeriodV2010PeriodAccountPeriodAvailablePhoneNumberCountryPeriodAvailablePhoneNumberMobile.md  ApiPeriodV2010PeriodAccountPeriodAvailablePhoneNumberCountryPeriodAvailablePhoneNumberVoip.md  ApiPeriodV2010PeriodAccountPeriodBalance.md  ApiPeriodV2010PeriodAccountPeriodCall.md  ApiPeriodV2010PeriodAccountPeriodCallPeriodCallEvent.md  ApiPeriodV2010PeriodAccountPeriodConferencePeriodParticipant.md  (+27 more)
crates/openapi/src/apis/: api20100401_account_api.rs  api20100401_application_api.rs  api20100401_auth_registrations_credential_list_mapping_api.rs  api20100401_authorized_connect_app_api.rs  api20100401_available_phone_number_country_api.rs  api20100401_conference_api.rs  api20100401_connect_app_api.rs  api20100401_credential_list_api.rs  api20100401_credential_list_mapping_api.rs  api20100401_daily_api.rs  api20100401_dependent_phone_number_api.rs  api20100401_domain_api.rs  api20100401_feedback_api.rs  api20100401_incoming_phone_number_api.rs  api20100401_ip_access_control_list_api.rs  api20100401_key_api.rs  api20100401_last_month_api.rs  api20100401_message_api.rs  api20100401_monthly_api.rs  api20100401_national_api.rs  api20100401_new_signing_key_api.rs  (+15 more)
crates/server/: Cargo.toml
crates/server/migrations/: 20240315182752_friends.down.sql  20240315182752_friends.up.sql  20241130202407_contacts.up.sql  20241209010554_deferred_contacts.down.sql  20241209010554_deferred_contacts.up.sql  20241209032431_groups.down.sql  20241209032431_groups.up.sql  20241210022321_pending_actions.down.sql  20241210022321_pending_actions.up.sql
crates/server/src/: command.rs  command_word.rs  confirm.rs  contacts.rs  db.rs  delete.rs  friends.rs  group.rs  help.rs  info.rs  main.rs  name.rs  stop.rs  test.rs  util.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/sms/: Cargo.toml
crates/sms/src/: command.rs  command_word.rs  contacts.rs  help.rs  lib.rs  test.rs
(+343 files in other folders)
