[package]
name = "laconic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["openapi"]

[dependencies]
anyhow = "1.0.80"
dotenv = "0.15.0"
openapi = { path = "./openapi" }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
