[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.80"
dotenv = "0.15.0"
openapi = { path = "crates/openapi" }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
axum = "0.7"

serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }

[workspace.dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
# features = ["json", "multipart", "rustls-tls"]
# default-features = false

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
