[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
dotenv = { workspace = true }
openapi = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
sqlx = { version = "=0.7.3", features = ["sqlite", "runtime-tokio"] }
