[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
ical.workspace = true
anyhow.workspace = true
dotenv.workspace = true
openapi.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
sqlx = { version = "=0.7.3", features = ["sqlite", "runtime-tokio"] }
log = "0.4"
env_logger = "0.11"
serde_json.workspace = true
enum-iterator = "2.0.0"
once_cell = "1.20"
rand = "0.8"

[dev-dependencies]
futures = "0.3"
