[package]
name = "sms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
ical.workspace = true
anyhow.workspace = true
dotenv.workspace = true
openapi.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
sqlx.workspace = true
log.workspace = true
env_logger.workspace = true
serde_json.workspace = true
enum-iterator.workspace = true
shared.workspace = true

[dev-dependencies]
futures.workspace = true
